@@ -1,0 +1,319 @@
+#------------------------------------------------------------------------------
+#$Author$
+#$Date$
+#$Rev$
+#$URL$
+#------------------------------------------------------------------------------
+#*
+# Data for this dataset was extracted from paper
+# "Covalent Radii and New Applications", doi: 10.4018/IJCCE.2018010103
+---
+"H":
+  atomic_number: 1
+  covalent_radius: 0.37
+"He":
+  atomic_number: 2
+  covalent_radius: 0.28
+"Li":
+  atomic_number: 3
+  covalent_radius: 1.23
+"Be":
+  atomic_number: 4
+  covalent_radius: 0.89
+"B":
+  atomic_number: 5
+  covalent_radius: 0.80
+"C":
+  atomic_number: 6
+  covalent_radius: 0.76
+"N":
+  atomic_number: 7
+  covalent_radius: 0.74
+"O":
+  atomic_number: 8
+  covalent_radius: 0.73
+"F":
+  atomic_number: 9
+  covalent_radius: 0.71
+"Ne":
+  atomic_number: 10
+  covalent_radius: 0.58
+"Na":
+  atomic_number: 11
+  covalent_radius: 1.57
+"Mg":
+  atomic_number: 12
+  covalent_radius: 1.36
+"Al":
+  atomic_number: 13
+  covalent_radius: 1.32
+"Si":
+  atomic_number: 14
+  covalent_radius: 1.18
+"P":
+  atomic_number: 15
+  covalent_radius: 1.07
+"S":
+  atomic_number: 16
+  covalent_radius: 1.03
+"Cl":
+  atomic_number: 17
+  covalent_radius: 0.99
+"Ar":
+  atomic_number: 18
+  covalent_radius: 0.97
+"K":
+  atomic_number: 19
+  covalent_radius: 1.95
+"Ca":
+  atomic_number: 20
+  covalent_radius: 1.74
+"Sc":
+  atomic_number: 21
+  covalent_radius: 1.44
+"Ti":
+  atomic_number: 22
+  covalent_radius: 1.32
+"V":
+  atomic_number: 23
+  covalent_radius: 1.22
+"Cr":
+  atomic_number: 24
+  covalent_radius: 1.17
+"Mn":
+  atomic_number: 25
+  covalent_radius: 1.17
+"Fe":
+  atomic_number: 26
+  covalent_radius: 1.17
+"Co":
+  atomic_number: 27
+  covalent_radius: 1.15
+"Ni":
+  atomic_number: 28
+  covalent_radius: 1.11
+"Cu":
+  atomic_number: 29
+  covalent_radius: 1.11
+"Zn":
+  atomic_number: 30
+  covalent_radius: 1.23
+"Ga":
+  atomic_number: 31
+  covalent_radius: 1.25
+"Ge":
+  atomic_number: 32
+  covalent_radius: 1.22
+"As":
+  atomic_number: 33
+  covalent_radius: 1.21
+"Se":
+  atomic_number: 34
+  covalent_radius: 1.17
+"Br":
+  atomic_number: 35
+  covalent_radius: 1.14
+"Kr":
+  atomic_number: 36
+  covalent_radius: 1.16
+"Rb":
+  atomic_number: 37
+  covalent_radius: 2.16
+"Sr":
+  atomic_number: 38
+  covalent_radius: 1.91
+"Y":
+  atomic_number: 39
+  covalent_radius: 1.62
+"Zr":
+  atomic_number: 40
+  covalent_radius: 1.45
+"Nb":
+  atomic_number: 41
+  covalent_radius: 1.34
+"Mo":
+  atomic_number: 42
+  covalent_radius: 1.29
+"Tc":
+  atomic_number: 43
+  covalent_radius: 1.27
+"Ru":
+  atomic_number: 44
+  covalent_radius: 1.24
+"Rh":
+  atomic_number: 45
+  covalent_radius: 1.25
+"Pd":
+  atomic_number: 46
+  covalent_radius: 1.28
+"Ag":
+  atomic_number: 47
+  covalent_radius: 1.34
+"Cd":
+  atomic_number: 48
+  covalent_radius: 1.41
+"In":
+  atomic_number: 49
+  covalent_radius: 1.50
+"Sn":
+  atomic_number: 50
+  covalent_radius: 1.40
+"Sb":
+  atomic_number: 51
+  covalent_radius: 1.41
+"Te":
+  atomic_number: 52
+  covalent_radius: 1.37
+"I":
+  atomic_number: 53
+  covalent_radius: 1.33
+"Xe":
+  atomic_number: 54
+  covalent_radius: 1.40
+"Cs":
+  atomic_number: 55
+  covalent_radius: 2.35
+"Ba":
+  atomic_number: 56
+  covalent_radius: 1.98
+"La":
+  atomic_number: 57
+  covalent_radius: 1.87
+"Ce":
+  atomic_number: 58
+  covalent_radius: 1.65
+"Pr":
+  atomic_number: 59
+  covalent_radius: 1.65
+"Nd":
+  atomic_number: 60
+  covalent_radius: 1.64
+"Pm":
+  atomic_number: 61
+  covalent_radius: 1.67
+"Sm":
+  atomic_number: 62
+  covalent_radius: 1.66
+"Eu":
+  atomic_number: 63
+  covalent_radius: 1.85
+"Gd":
+  atomic_number: 64
+  covalent_radius: 1.61
+"Tb":
+  atomic_number: 65
+  covalent_radius: 1.59
+"Dy":
+  atomic_number: 66
+  covalent_radius: 1.59
+"Ho":
+  atomic_number: 67
+  covalent_radius: 1.58
+"Er":
+  atomic_number: 68
+  covalent_radius: 1.57
+"Tm":
+  atomic_number: 69
+  covalent_radius: 1.56
+"Yb":
+  atomic_number: 70
+  covalent_radius: 1.70
+"Lu":
+  atomic_number: 71
+  covalent_radius: 1.56
+"Hf":
+  atomic_number: 72
+  covalent_radius: 1.44
+"Ta":
+  atomic_number: 73
+  covalent_radius: 1.34
+"W":
+  atomic_number: 74
+  covalent_radius: 1.30
+"Re":
+  atomic_number: 75
+  covalent_radius: 1.28
+"Os":
+  atomic_number: 76
+  covalent_radius: 1.26
+"Ir":
+  atomic_number: 77
+  covalent_radius: 1.26
+"Pt":
+  atomic_number: 78
+  covalent_radius: 1.29
+"Au":
+  atomic_number: 79
+  covalent_radius: 1.34
+"Hg":
+  atomic_number: 80
+  covalent_radius: 1.44
+"Tl":
+  atomic_number: 81
+  covalent_radius: 1.55
+"Pb":
+  atomic_number: 82
+  covalent_radius: 1.54
+"Bi":
+  atomic_number: 83
+  covalent_radius: 1.52
+"Po":
+  atomic_number: 84
+  covalent_radius: 1.53
+"At":
+  atomic_number: 85
+  covalent_radius: 1.45
+"Rn":
+  atomic_number: 86
+  covalent_radius: 1.42
+"Fr":
+  atomic_number: 87
+  covalent_radius: 2.46
+"Ra":
+  atomic_number: 88
+  covalent_radius: 2.35
+"Ac":
+  atomic_number: 89
+  covalent_radius: 1.98
+"Th":
+  atomic_number: 90
+  covalent_radius: 1.72
+"Pa":
+  atomic_number: 91
+  covalent_radius: 1.71
+"U":
+  atomic_number: 92
+  covalent_radius: 1.68
+"Np":
+  atomic_number: 93
+  covalent_radius: 1.67
+"Pu":
+  atomic_number: 94
+  covalent_radius: 1.66
+"Am":
+  atomic_number: 95
+  covalent_radius: 1.66
+"Cm":
+  atomic_number: 96
+  covalent_radius: 1.80
+"Bk":
+  atomic_number: 97
+  covalent_radius: 1.76
+"Cf":
+  atomic_number: 98
+  covalent_radius: 1.75
+"Es":
+  atomic_number: 99
+  covalent_radius: 1.72
+"Fm":
+  atomic_number: 100
+  covalent_radius: 1.71
+"Md":
+  atomic_number: 101
+  covalent_radius: 1.69
+"No":
+  atomic_number: 102
+  covalent_radius: 1.68
+"Lw":
+  atomic_number: 103
+  covalent_radius: 1.00
