@@ -2,7 +2,8 @@ cod-tools (unreleased)
 
   * Added:
     - COD::AtomProperties assembler:
-        - covalent radii from Lang and Smith (2014).
+        - covalent radii from Lang and Smith (2014);
+        - covalent radii from Zhang (2018).
     - cif_molecule:
         - copying '_chemical_name_common', '_chemical_name_systematic' and
           '_chemical_name_mineral' CIF data items from input files to output.
